Woking on sections: about-me & services

--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -44,6 +44,8 @@
     <!--Bower Components-->
     <!--bower:css-->
     <link rel="stylesheet" href="../bower_components/normalize-css/normalize.css" />
+    <link rel="stylesheet" href="../bower_components/owl.carousel/dist/assets/owl.carousel.css" />
+    <link rel="stylesheet" href="../bower_components/owl.carousel/dist/assets/owl.theme.default.css" />
     <!--endbower-->
     <!--Web Page - Style Sheets Sources-->
     <link rel="stylesheet" href="css/main.css">
@@ -180,7 +182,7 @@
                   <ul class="timeline__list">
                     <li class="timeline-point"><span class="timeline-point-period beginning">10.2015 - Obecnie</span>
                       <h4 class="timeline-point-title">Edukacja indywidualna</h4>
-                      <p class="timeline-point-description ending">Nauka zagadnień zwianych z szeroko pojętym front-endu internetowym i web designem.</p>
+                      <p class="timeline-point-description ending">Nauka zagadnień zwianych z szeroko pojętym front-endem internetowym i web designem.</p>
                     </li>
                     <li class="timeline-point"><span class="timeline-point-period beginning">09.2012 - Obecnie</span>
                       <h4 class="timeline-point-title">Wykształcenie: Wyższe</h4>
@@ -201,27 +203,27 @@
                   <ul class="timeline__list">
                     <li class="timeline-point"><span class="timeline-point-period beginning">01.2017 - Obecnie</span>
                       <h4 class="timeline-point-title">Front-End Developer / Freelancer</h4>
-                      <p class="timeline-point-description">Wykonywanie różnego rodzaju zleceń zdalnie dla klientów pozyskanych za pośrednictwem sieci.</p><a class="info-link timeline-point-link ending" href="https://github.com/mateuszarchicinski/mateusz-archicinski.pl">https://github.com/mateuszarchicinski/mateusz-archicinski.pl<span class="icon icon-github color-github info-icon" aria-hidden="true"></span></a>
+                      <p class="timeline-point-description">Krótkoterminowe zlecenia zadań do wykonania zdalnie.</p><a class="info-link timeline-point-link ending" href="https://www.mateusz-archicinski.pl" target="_blank">https://www.mateusz-archicinski.pl<span class="icon icon-globe color-primary info-icon" aria-hidden="true"></span></a>
                     </li>
                     <li class="timeline-point"><span class="timeline-point-period beginning">04.2016 - 01.2017</span>
                       <h4 class="timeline-point-title">Web Content Editor w K2 Internet S.A.</h4>
-                      <p class="timeline-point-description ending">Do głównych obowiązków zaliczało się obsługiwanie różnorodnych systemów zarządzania treścią w sieci, tworzenie stron kampanijno-produktowych typu landing page, long page i mailingów a także automatyzacja pracy za pomocą skryptów po stronie serwera/klienta js/nodejs.</p>
+                      <p class="timeline-point-description ending">Do głównych obowiązków zaliczało się obsługiwanie różnorodnych systemów zarządzania treścią w sieci, tworzenie stron kampanijno-produktowych typu landing page, long page i mailingów, a także automatyzacja pracy za pomocą skryptów po stronie serwera/klienta js/nodejs.</p>
                     </li>
                     <li class="timeline-point"><span class="timeline-point-period beginning">30.11.2015 - 18.12.2015</span>
                       <h4 class="timeline-point-title">Pracownik biurowy / Praktykant w GUS</h4>
-                      <p class="timeline-point-description ending">Praktyka studencka odbywana w Głównym Urzędzie Statystycznym w Warszawie, wykonywane czynności: tester systemu szkoleń wewnętrznych dla pracowników GUS z dostępem do cms'a Moodle.</p>
+                      <p class="timeline-point-description ending">Praktyka studencka odbywana w Głównym Urzędzie Statystycznym w Warszawie, wykonywane czynności: tester systemu szkoleń wewnętrznych dla pracowników GUS z dostępem do cmsa Moodle.</p>
                     </li>
                     <li class="timeline-point"><span class="timeline-point-period beginning">02.11.2015 - 27.11.2015</span>
                       <h4 class="timeline-point-title">Pracownik biurowy w Kancelarii Adwokackiej</h4>
-                      <p class="timeline-point-description ending">Zatrudnienie na umowe zlecenie w Kancelarii Adwokackiej, wykonywane czynności: prace biurowe.</p>
+                      <p class="timeline-point-description ending">Zatrudnienie na umowę zlecenie w Kancelarii Adwokackiej, wykonywane czynności: prace biurowe.</p>
                     </li>
                     <li class="timeline-point"><span class="timeline-point-period beginning">10.2015 - Obecnie</span>
-                      <h4 class="timeline-point-title">Projekty / W ramach nauki</h4>
-                      <p class="timeline-point-description">Wykonane i udostępnione projekty  w ramach nauki różnych technologii na moim Githubie.</p><a class="info-link timeline-point-link ending" href="https://github.com/mateuszarchicinski?tab=repositories">https://github.com/mateuszarchicinski?tab=repositories<span class="icon icon-github color-github info-icon" aria-hidden="true"></span></a>
+                      <h4 class="timeline-point-title">Projekty w ramach nauki</h4>
+                      <p class="timeline-point-description">Wykonane i udostępnione projekty w ramach nauki różnych technologii. Zachęcam do odwiedzenia mojego Githuba.</p><a class="info-link timeline-point-link ending" href="https://github.com/mateuszarchicinski?tab=repositories" target="_blank">https://github.com/mateuszarchicinski?tab=repositories<span class="icon icon-github color-github info-icon" aria-hidden="true"></span></a>
                     </li>
                     <li class="timeline-point beginning"><span class="timeline-point-period beginning">10.2015 - Obecnie</span>
                       <h4 class="timeline-point-title">Kursy internetowe</h4>
-                      <p class="timeline-point-description ending">Ukończenie dużej ilości kursów internetowych z zakresu: HTML5, Pug, CSS3, Less, Sass, Bootstrap, Materialize, Foundation, RWD, JS, jQuery, AngularJS, Angular Material, NodeJS, NPM, MongoDB, PHP, MySql, Git i Photoshop.</p>
+                      <p class="timeline-point-description ending">Ukończenie dużej ilości kursów internetowych z zakresu: HTML5, Pug, JSON, CSS3, Less, Sass, Bootstrap, Materialize, Foundation, RWD, JS, ES6, jQuery, AngularJS, AJAX, Angular Material, NodeJS, NPM, Bower, Gulp, MongoDB, Mongoose, PHP, WordPress, MySql, Git i Photoshop.</p>
                     </li>
                   </ul>
                 </div>
@@ -233,7 +235,28 @@
                   <h3 class="heading heading-4 text-center">Umiejętności<br>i technologie</h3><span class="filling-line ending"></span>
                 </header>
                 <div class="about-me-section-body">
-                  <p>lorem ipsum</p>
+                  <p class="paragraph beginning text-center">Wybrane umiejętności i technologie, które wykorzystuje w swoich projektach na co dzień.</p>
+                  <ul class="row align-content-center align-items-center justify-content-center skills__list">
+                    <li class="skills-1-skill"><span class="icon-img icon-html5 skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">HTML5</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-pug skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">Pug</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-json skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">JSON</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-css3 skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">CSS3</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-sass skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">Sass</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-bootstrap skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">Bootstrap</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-rwd skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">RWD</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-javascript skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">JavaScript</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-es6 skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">ES6</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-jquery skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">jQuery</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-angularjs skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">AngularJS</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-ajax skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">AJAX</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-nodejs skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">NodeJS</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-npm skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">NPM</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-bower skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">Bower</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-gulp skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">Gulp</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-wordpress skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">WordPress</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-git skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">Git</span></li>
+                    <li class="skills-1-skill"><span class="icon-img icon-photoshop skills-1-skill-icon" aria-hidden="true"></span><span class="skills-1-skill-title">Photoshop</span></li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -253,6 +276,15 @@
               </div>
               <p class="section-header-description">Sprawdź co mogę ci zaoferować.</p>
             </header>
+          </div>
+          <div class="row no-gutters">
+            <div class="owl-carousel owl-theme owl-carousel-js">
+              <div>Kodowanie PSD do HTML/CSS/JS</div>
+              <div>Dostosowanie do urządzeń mobilnych</div>
+              <div>Administracja stron internetowych</div>
+              <div>Aplikacje SPA</div>
+              <div>API</div>
+            </div>
           </div>
         </div>
       </section>
@@ -335,6 +367,8 @@
     <!--build:js js/main.min.js-->
     <!--Bower Components-->
     <!--bower:js-->
+    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/owl.carousel/dist/owl.carousel.js"></script>
     <!--endbower-->
     <!--Web Page - JavaScript Sources-->
     <script src="js/main.js"></script>
