Working on services section component & owl-carusel

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -88,8 +88,8 @@
                 <div class="heading-separator__line accent"></div>
               </div>
               <h3 class="heading heading-3 white text-center">Mateusz Archiciński</h3>
-              <div class="home-header-buttons"><a class="btn to-top btn-accent" href="#aboutMe">Get to know me</a><a class="btn to-top btn-primary-dark" href="#services">Services</a></div>
-            </hgroup><a class="btn btn-round to-top" href="#about-me" aria-label="Go to section about me"><span class="icon icon-125 icon-down-open-1" aria-hidden="true"></span></a>
+              <div class="home-header-buttons"><a class="btn to-top btn-accent color-white" href="#aboutMe">Get to know me</a><a class="btn to-top btn-primary-dark color-white" href="#services">Services</a></div>
+            </hgroup><a class="btn btn-round to-top color-white" href="#about-me" aria-label="Go to section about me"><span class="icon icon-125 icon-down-open-1" aria-hidden="true"></span></a>
           </div>
         </div>
       </section>
@@ -109,7 +109,7 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-6">
-              <figure class="dev-face__wrapper"><img class="dev-face__img dev-face__img-rotate-28" src="../images/Mateusz-Archiciński_Front-End-Developer.jpg" alt="Face photo of Mateusz Archiciński" width="190" height="190">
+              <figure class="dev-face__wrapper"><img class="dev-face__img dev-face__img-rotate-28" src="images/Mateusz-Archiciński_Front-End-Developer.jpg" alt="Face photo of Mateusz Archiciński" width="190" height="190">
                 <figcaption class="dev-face__img-caption"><span class="dev-face__name">Mateusz Archiciński</span><span class="dev-face__profession">Front-End Developer</span></figcaption>
               </figure>
               <div class="about-me-section">
@@ -277,13 +277,50 @@
               <p class="section-header-description">Sprawdź co mogę ci zaoferować.</p>
             </header>
           </div>
-          <div class="row no-gutters">
-            <div class="owl-carousel owl-theme owl-carousel-js">
-              <div>Kodowanie PSD do HTML/CSS/JS</div>
-              <div>Dostosowanie do urządzeń mobilnych</div>
-              <div>Administracja stron internetowych</div>
-              <div>Aplikacje SPA</div>
-              <div>API</div>
+          <div class="row">
+            <div class="col-12">
+              <div class="owl-carousel owl-theme owl-carousel-services owl-carousel-services-js">
+                <div class="services-1-item"><span class="icon icon-5 icon-star services-1-item-icon text-center"></span>
+                  <h3 class="heading heading-4 services-1-item-title text-center">Kodowanie PSD do HTML/CSS/JS</h3>
+                  <div class="heading-separator">
+                    <div class="heading-separator__line heading-separator__line-bolded-3 services-1-item-heading-separator__line"></div>
+                  </div>
+                  <p class="paragraph text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <button class="btn to-top btn-primary-text services-1-item-button" type="button">Więcej</button>
+                </div>
+                <div class="services-1-item"><span class="icon icon-5 icon-github services-1-item-icon text-center"></span>
+                  <h3 class="heading heading-4 services-1-item-title text-center">Kodowanie PSD do HTML/CSS/JS</h3>
+                  <div class="heading-separator">
+                    <div class="heading-separator__line heading-separator__line-bolded-3 services-1-item-heading-separator__line"></div>
+                  </div>
+                  <p class="paragraph text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <button class="btn to-top btn-primary-text services-1-item-button" type="button">Więcej</button>
+                </div>
+                <div class="services-1-item"><span class="icon icon-5 icon-desktop services-1-item-icon text-center"></span>
+                  <h3 class="heading heading-4 services-1-item-title text-center">Kodowanie PSD do HTML/CSS/JS</h3>
+                  <div class="heading-separator">
+                    <div class="heading-separator__line heading-separator__line-bolded-3 services-1-item-heading-separator__line"></div>
+                  </div>
+                  <p class="paragraph text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <button class="btn to-top btn-primary-text services-1-item-button" type="button">Więcej</button>
+                </div>
+                <div class="services-1-item"><span class="icon icon-5 icon-mobile services-1-item-icon text-center"></span>
+                  <h3 class="heading heading-4 services-1-item-title text-center">Kodowanie PSD do HTML/CSS/JS</h3>
+                  <div class="heading-separator">
+                    <div class="heading-separator__line heading-separator__line-bolded-3 services-1-item-heading-separator__line"></div>
+                  </div>
+                  <p class="paragraph text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <button class="btn to-top btn-primary-text services-1-item-button" type="button">Więcej</button>
+                </div>
+                <div class="services-1-item"><span class="icon icon-5 icon-codepen services-1-item-icon text-center"></span>
+                  <h3 class="heading heading-4 services-1-item-title text-center">Kodowanie PSD do HTML/CSS/JS</h3>
+                  <div class="heading-separator">
+                    <div class="heading-separator__line heading-separator__line-bolded-3 services-1-item-heading-separator__line"></div>
+                  </div>
+                  <p class="paragraph text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <button class="btn to-top btn-primary-text services-1-item-button" type="button">Więcej</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -301,6 +338,11 @@
               </div>
               <p class="section-header-description">Stworzone przeze mnie projekty, samodzielnie jak i w grupie.</p>
             </header>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <div class="portfolio">sads</div>
+            </div>
           </div>
         </div>
       </section>
@@ -355,7 +397,7 @@
             <div class="heading-separator">
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
-            <div class="row align-content-center align-items-center justify-content-center main-footer__findme-body"><a class="btn btn-square to-top btn-codepen" href="http://codepen.io/mateuszarchicinski" target="_blank" aria-label="Go to Codepen of Mateusz Archiciński"><span class="icon icon-codepen" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-facebook" href="https://www.facebook.com/mateusz.archicinski" target="_blank" aria-label="Go to Facebook of Mateusz Archiciński"><span class="icon icon-facebook" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-github" href="https://github.com/mateuszarchicinski" target="_blank" aria-label="Go to Github of Mateusz Archiciński"><span class="icon icon-github" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-gplus" href="https://plus.google.com/111077912668591105452" target="_blank" aria-label="Go to Google+ of Mateusz Archiciński"><span class="icon icon-gplus" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-linkedin" href="https://pl.linkedin.com/in/mateuszarchicinski" target="_blank" aria-label="Go to Linkedin of Mateusz Archiciński"><span class="icon icon-linkedin" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-twitter" href="https://twitter.com/marchicinski" target="_blank" aria-label="Go to Twitter of Mateusz Archiciński"><span class="icon icon-twitter" aria-hidden="true"></span></a></div>
+            <div class="row align-content-center align-items-center justify-content-center main-footer__findme-body"><a class="btn btn-square to-top btn-codepen color-white" href="http://codepen.io/mateuszarchicinski" target="_blank" aria-label="Go to Codepen of Mateusz Archiciński"><span class="icon icon-codepen" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-facebook color-white" href="https://www.facebook.com/mateusz.archicinski" target="_blank" aria-label="Go to Facebook of Mateusz Archiciński"><span class="icon icon-facebook" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-github color-white" href="https://github.com/mateuszarchicinski" target="_blank" aria-label="Go to Github of Mateusz Archiciński"><span class="icon icon-github" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-gplus color-white" href="https://plus.google.com/111077912668591105452" target="_blank" aria-label="Go to Google+ of Mateusz Archiciński"><span class="icon icon-gplus" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-linkedin color-white" href="https://pl.linkedin.com/in/mateuszarchicinski" target="_blank" aria-label="Go to Linkedin of Mateusz Archiciński"><span class="icon icon-linkedin" aria-hidden="true"></span></a><a class="btn btn-square to-top btn-twitter color-white" href="https://twitter.com/marchicinski" target="_blank" aria-label="Go to Twitter of Mateusz Archiciński"><span class="icon icon-twitter" aria-hidden="true"></span></a></div>
           </div>
           <div class="col-12">
             <p class="main-footer__copyright"><small>&#169; 2015 - 2017 Mateusz Archiciński - All rights reserved</small></p>
