--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -55,7 +55,7 @@
   </head>
   <body>
     <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> to improve your experience.</p><![endif]-->
-    <header class="main-header main-header__fixed">
+    <header class="main-header">
       <div class="container">
         <div class="row no-gutters align-items-center justify-content-between"><a class="site-logo__wrapper" href="/"><img class="site-logo__img" src="images/logo/logo.png" alt="#MA - Logo strony internetowej" width="94" height="28"></a>
           <h1 class="text-hidden">#Mateusz Archiciński</h1>
@@ -280,44 +280,44 @@
           <div class="row">
             <div class="col-12">
               <div class="owl-carousel owl-theme owl-carousel-services owl-carousel-services-js">
-                <div class="services-1-item"><span class="icon icon-5 icon-star services-1-item-icon text-center"></span>
-                  <h3 class="heading heading-4 services-1-item-title text-center">Kodowanie PSD do HTML/CSS/JS</h3>
+                <div class="services-1-item text-center"><span class="icon-img icon-5 icon-services-website services-1-item-icon" aria-hidden="true"></span>
+                  <h3 class="heading heading-4 services-1-item-title">Kodowanie PSD do HTML/CSS/JS</h3>
                   <div class="heading-separator">
                     <div class="heading-separator__line heading-separator__line-bolded-3 services-1-item-heading-separator__line"></div>
                   </div>
-                  <p class="paragraph text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p class="paragraph">Pocięcie i zakodowanie do HTML5, CSS3 i JavaScript dostarczonego projektu graficznego strony internetowej, mailingu, szablonu WordPress i innych.</p>
                   <button class="btn to-top btn-primary-text services-1-item-button" type="button">Więcej</button>
                 </div>
-                <div class="services-1-item"><span class="icon icon-5 icon-github services-1-item-icon text-center"></span>
-                  <h3 class="heading heading-4 services-1-item-title text-center">Kodowanie PSD do HTML/CSS/JS</h3>
+                <div class="services-1-item text-center"><span class="icon-img icon-5 icon-services-devices services-1-item-icon" aria-hidden="true"></span>
+                  <h3 class="heading heading-4 services-1-item-title">Dostosowanie do różnych przeglądarek i urządzeń</h3>
                   <div class="heading-separator">
                     <div class="heading-separator__line heading-separator__line-bolded-3 services-1-item-heading-separator__line"></div>
                   </div>
-                  <p class="paragraph text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p class="paragraph">Dostosowanie strony internetowej do wybranych przeglądarek <br>i urządzeń mobilnych <br>z uwzględnieniem różnych rozdzielczości.</p>
                   <button class="btn to-top btn-primary-text services-1-item-button" type="button">Więcej</button>
                 </div>
-                <div class="services-1-item"><span class="icon icon-5 icon-desktop services-1-item-icon text-center"></span>
-                  <h3 class="heading heading-4 services-1-item-title text-center">Kodowanie PSD do HTML/CSS/JS</h3>
+                <div class="services-1-item text-center"><span class="icon-img icon-5 icon-services-admin services-1-item-icon" aria-hidden="true"></span>
+                  <h3 class="heading heading-4 services-1-item-title">Administracja stron internetowych</h3>
                   <div class="heading-separator">
                     <div class="heading-separator__line heading-separator__line-bolded-3 services-1-item-heading-separator__line"></div>
                   </div>
-                  <p class="paragraph text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p class="paragraph">Wdrożenie i utrzymanie strony/aplikacji internetowej w tym okresowe raporty z testów automatycznych wybranych funkcjonalności.</p>
                   <button class="btn to-top btn-primary-text services-1-item-button" type="button">Więcej</button>
                 </div>
-                <div class="services-1-item"><span class="icon icon-5 icon-mobile services-1-item-icon text-center"></span>
-                  <h3 class="heading heading-4 services-1-item-title text-center">Kodowanie PSD do HTML/CSS/JS</h3>
+                <div class="services-1-item text-center"><span class="icon-img icon-5 icon-services-spa services-1-item-icon" aria-hidden="true"></span>
+                  <h3 class="heading heading-4 services-1-item-title">SPA / Aplikacje internetowe</h3>
                   <div class="heading-separator">
                     <div class="heading-separator__line heading-separator__line-bolded-3 services-1-item-heading-separator__line"></div>
                   </div>
-                  <p class="paragraph text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p class="paragraph">Tworzenie całej warstwy klienta aplikacji internetowej lub wybranych komponentów w oparciu <br>o framework AngularJS, HTML5, CSS3, ES6/TypeScript.</p>
                   <button class="btn to-top btn-primary-text services-1-item-button" type="button">Więcej</button>
                 </div>
-                <div class="services-1-item"><span class="icon icon-5 icon-codepen services-1-item-icon text-center"></span>
-                  <h3 class="heading heading-4 services-1-item-title text-center">Kodowanie PSD do HTML/CSS/JS</h3>
+                <div class="services-1-item text-center"><span class="icon-img icon-5 icon-services-api services-1-item-icon" aria-hidden="true"></span>
+                  <h3 class="heading heading-4 services-1-item-title">API / Interfejsy programowania aplikacji</h3>
                   <div class="heading-separator">
                     <div class="heading-separator__line heading-separator__line-bolded-3 services-1-item-heading-separator__line"></div>
                   </div>
-                  <p class="paragraph text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p class="paragraph">Tworzenie całej warstwy serwera lub wybranych usług zapewniających dostęp do zasobów serwera za pośrednictwem protokołu HTTP <br>w oparciu o framework Express.</p>
                   <button class="btn to-top btn-primary-text services-1-item-button" type="button">Więcej</button>
                 </div>
               </div>
