--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -286,23 +286,23 @@
                     <div class="heading-separator__line heading-separator__line-bolded-3 services-1-item-heading-separator__line"></div>
                   </div>
                   <p class="paragraph">Pocięcie i zakodowanie do HTML5, CSS3 i JavaScript dostarczonego projektu graficznego strony internetowej, mailingu, szablonu WordPress i innych.</p>
-                  <button class="btn to-top btn-primary-text services-1-item-button" type="button">Więcej</button>
+                  <button class="btn to-top btn-primary-text services-1-item-button" type="button"><span>Więcej</span></button>
                 </div>
                 <div class="services-1-item text-center"><span class="icon-img icon-5 icon-services-devices services-1-item-icon" aria-hidden="true"></span>
                   <h3 class="heading heading-4 services-1-item-title">Dostosowanie do różnych przeglądarek i urządzeń</h3>
                   <div class="heading-separator">
                     <div class="heading-separator__line heading-separator__line-bolded-3 services-1-item-heading-separator__line"></div>
                   </div>
-                  <p class="paragraph">Dostosowanie strony internetowej do wybranych przeglądarek <br>i urządzeń mobilnych <br>z uwzględnieniem różnych rozdzielczości.</p>
-                  <button class="btn to-top btn-primary-text services-1-item-button" type="button">Więcej</button>
+                  <p class="paragraph">Dostosowanie strony internetowej do wybranych przeglądarek i urządzeń mobilnych z uwzględnieniem różnych rozdzielczości (tzw. Responsive Web Design).</p>
+                  <button class="btn to-top btn-primary-text services-1-item-button" type="button"><span>Więcej</span></button>
                 </div>
                 <div class="services-1-item text-center"><span class="icon-img icon-5 icon-services-admin services-1-item-icon" aria-hidden="true"></span>
                   <h3 class="heading heading-4 services-1-item-title">Administracja stron internetowych</h3>
                   <div class="heading-separator">
                     <div class="heading-separator__line heading-separator__line-bolded-3 services-1-item-heading-separator__line"></div>
                   </div>
-                  <p class="paragraph">Wdrożenie i utrzymanie strony/aplikacji internetowej w tym okresowe raporty z testów automatycznych wybranych funkcjonalności.</p>
-                  <button class="btn to-top btn-primary-text services-1-item-button" type="button">Więcej</button>
+                  <p class="paragraph">Wdrożenie i utrzymanie strony/aplikacji internetowej w tym okresowe raporty z testów automatycznych i manualnych wybranych funkcjonalności.</p>
+                  <button class="btn to-top btn-primary-text services-1-item-button" type="button"><span>Więcej</span></button>
                 </div>
                 <div class="services-1-item text-center"><span class="icon-img icon-5 icon-services-spa services-1-item-icon" aria-hidden="true"></span>
                   <h3 class="heading heading-4 services-1-item-title">SPA / Aplikacje internetowe</h3>
@@ -310,7 +310,7 @@
                     <div class="heading-separator__line heading-separator__line-bolded-3 services-1-item-heading-separator__line"></div>
                   </div>
                   <p class="paragraph">Tworzenie całej warstwy klienta aplikacji internetowej lub wybranych komponentów w oparciu <br>o framework AngularJS, HTML5, CSS3, ES6/TypeScript.</p>
-                  <button class="btn to-top btn-primary-text services-1-item-button" type="button">Więcej</button>
+                  <button class="btn to-top btn-primary-text services-1-item-button" type="button"><span>Więcej</span></button>
                 </div>
                 <div class="services-1-item text-center"><span class="icon-img icon-5 icon-services-api services-1-item-icon" aria-hidden="true"></span>
                   <h3 class="heading heading-4 services-1-item-title">API / Interfejsy programowania aplikacji</h3>
@@ -318,7 +318,7 @@
                     <div class="heading-separator__line heading-separator__line-bolded-3 services-1-item-heading-separator__line"></div>
                   </div>
                   <p class="paragraph">Tworzenie całej warstwy serwera lub wybranych usług zapewniających dostęp do zasobów serwera za pośrednictwem protokołu HTTP <br>w oparciu o framework Express.</p>
-                  <button class="btn to-top btn-primary-text services-1-item-button" type="button">Więcej</button>
+                  <button class="btn to-top btn-primary-text services-1-item-button" type="button"><span>Więcej</span></button>
                 </div>
               </div>
             </div>
@@ -341,7 +341,81 @@
           </div>
           <div class="row">
             <div class="col-12">
-              <div class="portfolio">sads</div>
+              <ul class="row align-content-center justify-content-center portfolio-filters__list portfolio-filters-js">
+                <li>
+                  <button class="btn portfolio-filters__button active" data-filter-type><span>All</span></button>
+                </li>
+                <li>
+                  <button class="btn portfolio-filters__button" data-filter-type="website"><span>Websites</span></button>
+                </li>
+                <li>
+                  <button class="btn portfolio-filters__button" data-filter-type="mailing"><span>Mailings</span></button>
+                </li>
+                <li>
+                  <button class="btn portfolio-filters__button" data-filter-type="spa"><span>Spa</span></button>
+                </li>
+                <li>
+                  <button class="btn portfolio-filters__button" data-filter-type="api"><span>Api</span></button>
+                </li>
+              </ul>
+              <div class="row align-content-center justify-content-center portfolio-items portfolio-items-js">
+                <div class="portfolio-1-item" data-type="website">
+                  <h3 class="heading heading-5 portfolio-1-item-title">Strona ABC</h3>
+                  <div class="heading-separator">
+                    <div class="heading-separator__line"></div>
+                  </div>
+                  <p class="paragraph ending portfolio-1-item-description">Strona ABC</p>
+                </div>
+                <div class="portfolio-1-item" data-type="mailing">
+                  <h3 class="heading heading-5 portfolio-1-item-title">Mailing ABC</h3>
+                  <div class="heading-separator">
+                    <div class="heading-separator__line"></div>
+                  </div>
+                  <p class="paragraph ending portfolio-1-item-description">Mailing ABC</p>
+                </div>
+                <div class="portfolio-1-item" data-type="website">
+                  <h3 class="heading heading-5 portfolio-1-item-title">Strona ABC</h3>
+                  <div class="heading-separator">
+                    <div class="heading-separator__line"></div>
+                  </div>
+                  <p class="paragraph ending portfolio-1-item-description">Strona ABC</p>
+                </div>
+                <div class="portfolio-1-item" data-type="mailing">
+                  <h3 class="heading heading-5 portfolio-1-item-title">Mailing ABC</h3>
+                  <div class="heading-separator">
+                    <div class="heading-separator__line"></div>
+                  </div>
+                  <p class="paragraph ending portfolio-1-item-description">Mailing ABC</p>
+                </div>
+                <div class="portfolio-1-item" data-type="spa">
+                  <h3 class="heading heading-5 portfolio-1-item-title">SPA ABC</h3>
+                  <div class="heading-separator">
+                    <div class="heading-separator__line"></div>
+                  </div>
+                  <p class="paragraph ending portfolio-1-item-description">SPA ABC</p>
+                </div>
+                <div class="portfolio-1-item" data-type="api">
+                  <h3 class="heading heading-5 portfolio-1-item-title">API ABC</h3>
+                  <div class="heading-separator">
+                    <div class="heading-separator__line"></div>
+                  </div>
+                  <p class="paragraph ending portfolio-1-item-description">API ABC</p>
+                </div>
+                <div class="portfolio-1-item" data-type="spa">
+                  <h3 class="heading heading-5 portfolio-1-item-title">SPA ABC</h3>
+                  <div class="heading-separator">
+                    <div class="heading-separator__line"></div>
+                  </div>
+                  <p class="paragraph ending portfolio-1-item-description">SPA ABC</p>
+                </div>
+                <div class="portfolio-1-item" data-type="api">
+                  <h3 class="heading heading-5 portfolio-1-item-title">API ABC</h3>
+                  <div class="heading-separator">
+                    <div class="heading-separator__line"></div>
+                  </div>
+                  <p class="paragraph ending portfolio-1-item-description">API ABC</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
