--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -343,7 +343,7 @@
             <div class="col-12">
               <ul class="row align-content-center justify-content-center portfolio-filters__list portfolio-filters-js">
                 <li>
-                  <button class="btn portfolio-filters__button active" data-filter-type><span>All</span></button>
+                  <button class="btn portfolio-filters__button active" data-filter-type="all"><span>All</span></button>
                 </li>
                 <li>
                   <button class="btn portfolio-filters__button" data-filter-type="website"><span>Websites</span></button>
@@ -358,62 +358,64 @@
                   <button class="btn portfolio-filters__button" data-filter-type="api"><span>Api</span></button>
                 </li>
               </ul>
-              <div class="row align-content-center justify-content-center portfolio-items portfolio-items-js">
-                <div class="portfolio-1-item" data-type="website">
-                  <h3 class="heading heading-5 portfolio-1-item-title">Strona ABC</h3>
+              <div class="row portfolio-items portfolio-items-js">
+                <div class="portfolio-item text-center" data-type="website">
+                  <h3 class="heading heading-5 portfolio-item-title">Strona ABC</h3>
                   <div class="heading-separator">
                     <div class="heading-separator__line"></div>
                   </div>
-                  <p class="paragraph ending portfolio-1-item-description">Strona ABC</p>
+                  <p class="paragraph ending portfolio-item-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                  <div class="portfolio-item-buttons"><a class="btn to-top btn-primary-text" href="#">Source code</a><a class="btn to-top btn-primary" href="#">Live demo</a></div>
                 </div>
-                <div class="portfolio-1-item" data-type="mailing">
-                  <h3 class="heading heading-5 portfolio-1-item-title">Mailing ABC</h3>
+                <div class="portfolio-item text-center" data-type="mailing">
+                  <h3 class="heading heading-5 portfolio-item-title">Mailing ABC</h3>
                   <div class="heading-separator">
                     <div class="heading-separator__line"></div>
                   </div>
-                  <p class="paragraph ending portfolio-1-item-description">Mailing ABC</p>
+                  <p class="paragraph ending portfolio-item-description">Mailing ABC</p>
+                  <div class="portfolio-item-buttons"><a class="btn to-top btn-primary-text" href="#">Source code</a></div>
                 </div>
-                <div class="portfolio-1-item" data-type="website">
-                  <h3 class="heading heading-5 portfolio-1-item-title">Strona ABC</h3>
+                <div class="portfolio-item text-center" data-type="website">
+                  <h3 class="heading heading-5 portfolio-item-title">Strona ABC</h3>
                   <div class="heading-separator">
                     <div class="heading-separator__line"></div>
                   </div>
-                  <p class="paragraph ending portfolio-1-item-description">Strona ABC</p>
+                  <p class="paragraph ending portfolio-item-description">Strona ABC</p>
                 </div>
-                <div class="portfolio-1-item" data-type="mailing">
-                  <h3 class="heading heading-5 portfolio-1-item-title">Mailing ABC</h3>
+                <div class="portfolio-item text-center" data-type="mailing">
+                  <h3 class="heading heading-5 portfolio-item-title">Mailing ABC</h3>
                   <div class="heading-separator">
                     <div class="heading-separator__line"></div>
                   </div>
-                  <p class="paragraph ending portfolio-1-item-description">Mailing ABC</p>
+                  <p class="paragraph ending portfolio-item-description">Mailing ABC</p>
                 </div>
-                <div class="portfolio-1-item" data-type="spa">
-                  <h3 class="heading heading-5 portfolio-1-item-title">SPA ABC</h3>
+                <div class="portfolio-item text-center" data-type="spa">
+                  <h3 class="heading heading-5 portfolio-item-title">SPA ABC</h3>
                   <div class="heading-separator">
                     <div class="heading-separator__line"></div>
                   </div>
-                  <p class="paragraph ending portfolio-1-item-description">SPA ABC</p>
+                  <p class="paragraph ending portfolio-item-description">SPA ABC</p>
                 </div>
-                <div class="portfolio-1-item" data-type="api">
-                  <h3 class="heading heading-5 portfolio-1-item-title">API ABC</h3>
+                <div class="portfolio-item text-center" data-type="api">
+                  <h3 class="heading heading-5 portfolio-item-title">API ABC</h3>
                   <div class="heading-separator">
                     <div class="heading-separator__line"></div>
                   </div>
-                  <p class="paragraph ending portfolio-1-item-description">API ABC</p>
+                  <p class="paragraph ending portfolio-item-description">API ABC</p>
                 </div>
-                <div class="portfolio-1-item" data-type="spa">
-                  <h3 class="heading heading-5 portfolio-1-item-title">SPA ABC</h3>
+                <div class="portfolio-item text-center" data-type="spa">
+                  <h3 class="heading heading-5 portfolio-item-title">SPA ABC</h3>
                   <div class="heading-separator">
                     <div class="heading-separator__line"></div>
                   </div>
-                  <p class="paragraph ending portfolio-1-item-description">SPA ABC</p>
+                  <p class="paragraph ending portfolio-item-description">SPA ABC</p>
                 </div>
-                <div class="portfolio-1-item" data-type="api">
-                  <h3 class="heading heading-5 portfolio-1-item-title">API ABC</h3>
+                <div class="portfolio-item text-center" data-type="api">
+                  <h3 class="heading heading-5 portfolio-item-title">API ABC</h3>
                   <div class="heading-separator">
                     <div class="heading-separator__line"></div>
                   </div>
-                  <p class="paragraph ending portfolio-1-item-description">API ABC</p>
+                  <p class="paragraph ending portfolio-item-description">API ABC</p>
                 </div>
               </div>
             </div>
