Improving portfolio section component pug/sass/js

--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -343,79 +343,69 @@
             <div class="col-12">
               <ul class="row align-content-center justify-content-center portfolio-filters__list portfolio-filters-js">
                 <li>
-                  <button class="btn portfolio-filters__button active" data-filter-type="all"><span>All</span></button>
+                  <button class="btn portfolio-filters__button active" data-filter-type="all"><span>Wszystko</span></button>
                 </li>
                 <li>
-                  <button class="btn portfolio-filters__button" data-filter-type="website"><span>Websites</span></button>
+                  <button class="btn portfolio-filters__button" data-filter-type="websites"><span>Strony internetowe</span></button>
                 </li>
                 <li>
-                  <button class="btn portfolio-filters__button" data-filter-type="mailing"><span>Mailings</span></button>
+                  <button class="btn portfolio-filters__button" data-filter-type="mailings"><span>Mailingi</span></button>
                 </li>
                 <li>
-                  <button class="btn portfolio-filters__button" data-filter-type="spa"><span>Spa</span></button>
+                  <button class="btn portfolio-filters__button" data-filter-type="spa"><span>SPA</span></button>
                 </li>
                 <li>
-                  <button class="btn portfolio-filters__button" data-filter-type="api"><span>Api</span></button>
+                  <button class="btn portfolio-filters__button" data-filter-type="api"><span>API</span></button>
                 </li>
               </ul>
               <div class="row portfolio-items portfolio-items-js">
-                <div class="portfolio-item text-center" data-type="website">
-                  <h3 class="heading heading-5 portfolio-item-title">Strona ABC</h3>
-                  <div class="heading-separator">
-                    <div class="heading-separator__line"></div>
-                  </div>
-                  <p class="paragraph ending portfolio-item-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                  <div class="portfolio-item-buttons"><a class="btn to-top btn-primary-text" href="#">Source code</a><a class="btn to-top btn-primary" href="#">Live demo</a></div>
+                <div class="portfolio-item" data-type="websites">
+                  <figure class="portfolio-item__figure"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="sadasdas">
+                    <figcaption class="portfolio-item__figcaption text-center">
+                      <h3 class="heading heading-5 portfolio-item-title">Strona WEBSITE</h3>
+                      <div class="heading-separator">
+                        <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 primary"></div>
+                      </div>
+                      <p class="paragraph ending portfolio-item-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                      <div class="portfolio-item-buttons"><a class="btn to-top color-white" href="#">Kod źródłowy</a><a class="btn to-top btn-primary" href="#">Podgląd</a></div>
+                    </figcaption>
+                  </figure>
                 </div>
-                <div class="portfolio-item text-center" data-type="mailing">
-                  <h3 class="heading heading-5 portfolio-item-title">Mailing ABC</h3>
-                  <div class="heading-separator">
-                    <div class="heading-separator__line"></div>
-                  </div>
-                  <p class="paragraph ending portfolio-item-description">Mailing ABC</p>
-                  <div class="portfolio-item-buttons"><a class="btn to-top btn-primary-text" href="#">Source code</a></div>
+                <div class="portfolio-item" data-type="mailings">
+                  <figure class="portfolio-item__figure"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="sadasdas">
+                    <figcaption class="portfolio-item__figcaption text-center">
+                      <h3 class="heading heading-5 portfolio-item-title">Strona MAILINGS</h3>
+                      <div class="heading-separator">
+                        <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 primary"></div>
+                      </div>
+                      <p class="paragraph ending portfolio-item-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                      <div class="portfolio-item-buttons"><a class="btn to-top color-white" href="#">Kod źródłowy</a><a class="btn to-top btn-primary" href="#">Podgląd</a></div>
+                    </figcaption>
+                  </figure>
                 </div>
-                <div class="portfolio-item text-center" data-type="website">
-                  <h3 class="heading heading-5 portfolio-item-title">Strona ABC</h3>
-                  <div class="heading-separator">
-                    <div class="heading-separator__line"></div>
-                  </div>
-                  <p class="paragraph ending portfolio-item-description">Strona ABC</p>
+                <div class="portfolio-item" data-type="spa">
+                  <figure class="portfolio-item__figure"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="sadasdas">
+                    <figcaption class="portfolio-item__figcaption text-center">
+                      <h3 class="heading heading-5 portfolio-item-title">Strona SPA</h3>
+                      <div class="heading-separator">
+                        <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 primary"></div>
+                      </div>
+                      <p class="paragraph ending portfolio-item-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                      <div class="portfolio-item-buttons"><a class="btn to-top color-white" href="#">Kod źródłowy</a><a class="btn to-top btn-primary" href="#">Podgląd</a></div>
+                    </figcaption>
+                  </figure>
                 </div>
-                <div class="portfolio-item text-center" data-type="mailing">
-                  <h3 class="heading heading-5 portfolio-item-title">Mailing ABC</h3>
-                  <div class="heading-separator">
-                    <div class="heading-separator__line"></div>
-                  </div>
-                  <p class="paragraph ending portfolio-item-description">Mailing ABC</p>
-                </div>
-                <div class="portfolio-item text-center" data-type="spa">
-                  <h3 class="heading heading-5 portfolio-item-title">SPA ABC</h3>
-                  <div class="heading-separator">
-                    <div class="heading-separator__line"></div>
-                  </div>
-                  <p class="paragraph ending portfolio-item-description">SPA ABC</p>
-                </div>
-                <div class="portfolio-item text-center" data-type="api">
-                  <h3 class="heading heading-5 portfolio-item-title">API ABC</h3>
-                  <div class="heading-separator">
-                    <div class="heading-separator__line"></div>
-                  </div>
-                  <p class="paragraph ending portfolio-item-description">API ABC</p>
-                </div>
-                <div class="portfolio-item text-center" data-type="spa">
-                  <h3 class="heading heading-5 portfolio-item-title">SPA ABC</h3>
-                  <div class="heading-separator">
-                    <div class="heading-separator__line"></div>
-                  </div>
-                  <p class="paragraph ending portfolio-item-description">SPA ABC</p>
-                </div>
-                <div class="portfolio-item text-center" data-type="api">
-                  <h3 class="heading heading-5 portfolio-item-title">API ABC</h3>
-                  <div class="heading-separator">
-                    <div class="heading-separator__line"></div>
-                  </div>
-                  <p class="paragraph ending portfolio-item-description">API ABC</p>
+                <div class="portfolio-item" data-type="api">
+                  <figure class="portfolio-item__figure"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="sadasdas">
+                    <figcaption class="portfolio-item__figcaption text-center">
+                      <h3 class="heading heading-5 portfolio-item-title">Strona API</h3>
+                      <div class="heading-separator">
+                        <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 primary"></div>
+                      </div>
+                      <p class="paragraph ending portfolio-item-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                      <div class="portfolio-item-buttons"><a class="btn to-top color-white" href="#">Kod źródłowy</a><a class="btn to-top btn-primary" href="#">Podgląd</a></div>
+                    </figcaption>
+                  </figure>
                 </div>
               </div>
             </div>
